--- a/visualization.ipynb
+++ b/visualization.ipynb
@@ -242,19 +242,11 @@
     "  columns because the pointers are stored in a cache-friendly way, but fetching the *values* pointed\n",
     "  by pointers not necessarily is. It's actually not cache-friendly at all if the memory allocator\n",
     "  places the values at random locations, but if the allocator places them at contiguous locations,\n",
-    "  it benefits from cache optimization.\n",
+    "  we may benefit from cache optimization.\n",
     "\n",
     "Of course, it's much simpler to use a library dedicated to linear algebra like BLAS or Numpy to\n",
-    "perform that kind of operation because they implement that sort of optimization out of the box."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8217c5a9",
-   "metadata": {},
-   "source": [
-    "### Cache-Oblivious Fast Fourier Transform (FFT)\n",
-    "\n"
+    "perform that kind of operation because they implement cache optimization (and other optimizations!)\n",
+    "out of the box."
    ]
   }
  ],
